--- a/helm/values/prod-values.yaml
+++ b/helm/values/prod-values.yaml
@@ -1,13 +1,13 @@
 image:
-  repository: quay.io/ukhomeofficedigital/REPLACE-SERVICE-NAME
+  repository: quay.io/ukhomeofficedigital/callisto-accruals-person-consumer
   tag: latest
   pullPolicy: Always
 
 service:
-  port: REPLACE-SERVICE-PORT
+  port: 9090
 
 kafka:
-  defaultTopic: REPLACE-TOPIC-NAME
-  identity: REPLACE-KAFKA-IDENTITY
+  defaultTopic: callisto-person-people
+  identity: accruals-person-consumer
   mskSecretKeyRefName: callisto-prod-msk
   bootstrapSecretKeyRefName: callisto-prod-bootstrap
