--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
     <artifactId>callisto-accruals-person-consumer</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>callisto-accruals-person-consumer</name>
-    <description>Template for callisto services</description>
+    <description>Callisto Accruals Person consumer service</description>
     <properties>
         <java.version>17</java.version>
         <maven.compiler.source>${java.version}</maven.compiler.source>
