--- a/.drone.yml
+++ b/.drone.yml
@@ -70,7 +70,7 @@ steps:
 ---
 kind: pipeline
 type: kubernetes
-name: build_service
+name: build-service
 
 platform:
   os: linux
@@ -89,7 +89,7 @@ quay_settings: &quay_settings
   image: plugins/docker
   settings:
     registry: quay.io
-    repo: quay.io/ukhomeofficedigital/REPLACE-QUAY-REPO
+    repo: quay.io/ukhomeofficedigital/callisto-accruals-person-consumer
     username:
       from_secret: quay_robot_name
     password:
@@ -123,9 +123,9 @@ steps:
         -Dsonar.host.url=$${SONAR_HOST}
         -Dsonar.login=$${SONAR_TOKEN}
         -Dsonar.organization=ukhomeoffice
-        -Dsonar.projectKey=REPLACE-SERVICE-NAME
+        -Dsonar.projectKey=callisto-accruals-person-consumer
         -Dsonar.branch.name=$DRONE_BRANCH
-        -Dsonar.projectName=REPLACE-SERVICE-NAME
+        -Dsonar.projectName=callisto-accruals-person-consumer
         -Dsonar.qualitygate.wait=true
     when:
       event:
@@ -168,7 +168,7 @@ platform:
   arch: amd64
 
 depends_on:
-  - build_service
+  - build-service
 
 trigger:
   event:
@@ -187,11 +187,11 @@ steps:
         - branch=${DRONE_SOURCE_BRANCH%%/*}
       values_files:
         - ./helm/values/dev-values.yaml
-      release: REPLACE-SERVICE-NAME-${DRONE_SOURCE_BRANCH%%/*}
+      release: callisto-accruals-person-consumer-${DRONE_SOURCE_BRANCH%%/*}
       kube_certificate:
         from_secret: notprod_kube_api_certificate
       kube_api_server:
-        from_secret: not_prod_kube_api_url
+        from_secret: notprod_kube_api_url
       kube_token:
         from_secret: dev_kube_token
 
@@ -228,11 +228,11 @@ steps:
         - image.tag=${DRONE_COMMIT_SHA}
       values_files:
         - ./helm/values/dev-values.yaml
-      release: REPLACE-SERVICE-NAME
+      release: callisto-accruals-person-consumer
       kube_certificate:
         from_secret: notprod_kube_api_certificate
       kube_api_server:
-        from_secret: not_prod_kube_api_url
+        from_secret: notprod_kube_api_url
       kube_token:
         from_secret: dev_kube_token
 
@@ -268,11 +268,11 @@ steps:
         - image.tag=${DRONE_COMMIT_SHA}
       values_files:
         - ./helm/values/test-values.yaml
-      release: REPLACE-SERVICE-NAME
+      release: callisto-accruals-person-consumer
       kube_certificate:
         from_secret: notprod_kube_api_certificate
       kube_api_server:
-        from_secret: not_prod_kube_api_url
+        from_secret: notprod_kube_api_url
       kube_token:
         from_secret: test_kube_token
 
@@ -306,7 +306,7 @@ steps:
         - image.tag=${DRONE_COMMIT_SHA}
       values_files:
         - ./helm/values/prod-values.yaml
-      release: REPLACE-SERVICE-NAME
+      release: callisto-accruals-person-consumer
       kube_certificate:
         from_secret: prod_kube_api_certificate
       kube_api_server:
