stop depoyments to dev and test

--- a/.drone.yml
+++ b/.drone.yml
@@ -172,7 +172,16 @@ depends_on:
 
 trigger:
   event:
-    - pull_request
+    exclude:
+      - push
+      - pull_request
+      - tag
+      - promote
+      - rollback
+#to reinstate branch deploys on pull requests change trigger to
+#trigger:
+# event:
+#   - pull_request
 
 steps:
   - name: deploy_to_branch
@@ -210,10 +219,17 @@ depends_on:
 
 trigger:
   event:
-    include:
-      - push
     exclude:
+      - push
+      - pull_request
+      - tag
       - promote
+      - rollback
+  #to reinstate dev deploy on pull requests change trigger to
+  #trigger:
+  # event:
+  #    include:
+  #      - push
   branch:
     - main
 
@@ -252,12 +268,19 @@ depends_on:
 
 trigger:
   event:
-    - push
-  exclude:
-    - promote
+    exclude:
+      - push
+      - pull_request
+      - tag
+      - promote
+      - rollback
+  #to reinstate test deploy on pull requests change trigger to
+  #trigger:
+  # event:
+  #    include:
+  #      - push
   branch:
     - main
-
 steps:
   - name: deploy_to_test
     image: pelotech/drone-helm3
